src/styles.css
:root {
    --off-white: rgb(250, 250, 250);
    --off-black: rgb(20, 20, 20);
    --light-grey: rgb(200, 200, 200)
}

/* General */
@font-face {
    font-family: 'Merriweather';
    font-style: normal;
    font-weight: 400;
    font-display: auto;
    src: url(/fonts/Merriweather-Regular.ttf) format('truetype');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
        U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
        U+FEFF, U+FFFD;
}

* {
    color: var(--off-black);
    font-family: 'Merriweather', sans-serif;
    font-size: 1.1rem;
    line-height: 1.6em;
}

body {
    background-color: var(--off-white);
    min-height: 100vh;
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

main {
    flex-grow: 1;
    max-width: 50rem;
    margin: 0 auto;
    padding-left: 4%;
    padding-right: 4%;
    flex-direction: column;
    justify-content: space-between;
    display: flex
}

/* Navbar */
#hero {
    margin: 4px;
}

#hero a {
    font-size: 1.66rem;
    font-weight: bold;
    text-decoration: none;
    padding-right: 16px;
}

nav ul {
    list-style-type: none;
}

nav li {
    display: inline-block;
}

nav a {
    text-decoration: none;
}

nav {
    display: flex;
    align-items: center;
    border-bottom: solid 1px var(--light-grey);
    padding-left: 4%;
    padding-right: 4%;
    margin-bottom: 16px;
}

/* Footer */
footer {
    border-top: solid 1px var(--light-grey);
    padding-top: 6px;
    padding-bottom: 6px;
    padding-left: 4%;
    padding-right: 4%;
    display: flex;
    align-items: center;
    justify-content: center;
}

#footer-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 50rem;
}


#source-link {
    font-size: small;
}

/* Icons */
.icon {
    vertical-align: middle;
    width: 20px;
    height: 20px;
    padding-left: 6px;
    padding-right: 6px;
}

#social-media-icons a {
    text-decoration: none;
}

.grow-on-hover {
    transition: transform 0.05s ease;
}

.grow-on-hover:hover {
    transform: scale(1.075);
}

.grow-on-hover:active {
    transform: scale(0.975);
}

.navbar-active {
    border-bottom: solid 1px var(--off-black);
}

#blog-post-date {
    font-size: 0.8rem;
}

